--- a/src/index.css
+++ b/src/index.css
@@ -8,14 +8,14 @@
   letter-spacing: 0.05em; }
 
 code {
-  color: #2bae85;
-  background-color: #f0f5e5;
+  color: #813c85;
+  background-color: #fbecde;
   border-radius: 4px; }
 
 .color-yellow {
-  color: #fecc11; }
+  color: #fcd337; }
   .color-yellow:hover, .color-yellow.active {
-    background-color: #fecc11;
+    background-color: #fcd337;
     color: #ffffff; }
 
 .color-orange {
@@ -43,9 +43,9 @@ code {
     color: #ffffff; }
 
 .color-green {
-  color: #2bae85; }
+  color: #45b787; }
   .color-green:hover, .color-green.active {
-    background-color: #2bae85;
+    background-color: #45b787;
     color: #ffffff; }
 
 .color-cyan {
@@ -63,7 +63,7 @@ code {
       width: 100%;
       height: 100%;
       min-height: 100vh;
-      padding-top: 2em;
+      padding: 2em 0;
       box-sizing: border-box; }
     .ym-outWrapper .ym-container .ym-content {
       width: 768px;
@@ -74,19 +74,23 @@ code {
       border-radius: 5px; }
       .ym-outWrapper .ym-container .ym-content .title {
         padding: 2em 0;
-        border-bottom: 1px solid #2bae85; }
+        border-bottom: 1px solid #45b787; }
         .ym-outWrapper .ym-container .ym-content .title h1 {
           font-weight: normal;
           font-size: 2.3em;
-          color: #2bae85;
+          color: #45b787;
           text-align: center; }
       .ym-outWrapper .ym-container .ym-content .main h2 {
         font-weight: normal;
         font-size: 1.2em;
-        color: #2bae85;
+        color: #45b787;
         padding: .8em 0; }
       .ym-outWrapper .ym-container .ym-content .main .intro-text code {
         padding: .1em .2em; }
+      .ym-outWrapper .ym-container .ym-content .main .show-area .element {
+        padding: 1em 0; }
+        .ym-outWrapper .ym-container .ym-content .main .show-area .element .ymBtn {
+          margin-right: 5px; }
       .ym-outWrapper .ym-container .ym-content .main .show-area code {
         font-size: .9em;
         padding: 1em;
