--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
-$basic_color: #2bae85;
+$basic_color: #45b787;
+$basic_hover_color: #2c9678;
 * {
   padding: 0;
   margin: 0;
@@ -9,12 +10,12 @@ $basic_color: #2bae85;
   letter-spacing: 0.05em;
 }
 code {
-  color: $basic_color;
-  background-color: #f0f5e5;
+  color: #813c85;
+  background-color: #fbecde;
   border-radius: 4px;
 }
 $color_name: yellow orange red purple blue green cyan;
-$color_list: #fecc11 #f97d1c #de1c31 #813c85 #2775b6 #2bae85 #1a94bc;
+$color_list: #fcd337 #f97d1c #de1c31 #813c85 #2775b6 #45b787 #1a94bc;
 @each $name in $color_name {
   $i: index($color_name,$name);
   .color-#{$name} {
@@ -35,7 +36,7 @@ $color_list: #fecc11 #f97d1c #de1c31 #813c85 #2775b6 #2bae85 #1a94bc;
       width: 100%;
       height: 100%;
       min-height: 100vh;
-      padding-top: 2em;
+      padding: 2em 0;
       box-sizing: border-box;
     }
     .ym-content {
@@ -68,6 +69,12 @@ $color_list: #fecc11 #f97d1c #de1c31 #813c85 #2775b6 #2bae85 #1a94bc;
           }
         }
         .show-area {
+          .element {
+            padding: 1em 0;
+            .ymBtn {
+              margin-right: 5px;
+            }
+          }
           code {
             font-size: .9em;
             padding: 1em;
