--- a/src/layout/leftmenu.css
+++ b/src/layout/leftmenu.css
@@ -1,24 +1,75 @@
-.ym-menu .placeDiv {
-  width: 160px; }
+.ym-menu .menu-place {
+  width: 160px;
+  transition: width ease-in-out 1s; }
 
-.ym-menu .actDiv {
+.ym-menu .menu-btn {
+  position: fixed;
+  top: 0;
+  left: -4em;
+  width: 4em;
+  height: 4em;
+  padding: 1em;
+  background: #f9f4dc;
+  z-index: 999;
+  cursor: pointer; }
+  .ym-menu .menu-btn span {
+    display: block;
+    width: 2em;
+    height: .2em;
+    background-color: #2775b6;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -.1em 0 0 -1em; }
+    .ym-menu .menu-btn span::before {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 2em;
+      height: .2em;
+      background-color: #f97d1c;
+      top: -.5em; }
+    .ym-menu .menu-btn span::after {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 2em;
+      height: .2em;
+      background-color: #45b787;
+      top: .5em; }
+
+.ym-menu .menu-main {
   position: fixed;
   width: 160px;
   top: 0;
   left: 0;
   height: 100vh;
   background-color: #f9f4dc;
-  box-sizing: border-box; }
-  .ym-menu .actDiv .logo {
+  box-sizing: border-box;
+  transition: left ease-in-out 1s;
+  z-index: 1000; }
+  .ym-menu .menu-main .logo {
     color: #12aa9c;
     font-size: 1.8em;
     text-align: center;
     margin: 2em auto 1em; }
-  .ym-menu .actDiv nav {
+  .ym-menu .menu-main nav {
     padding: 1em 0;
     overflow: hidden; }
-    .ym-menu .actDiv nav a {
+    .ym-menu .menu-main nav a {
       display: block;
       text-align: center;
       font-size: 1.1em;
       line-height: 2.5; }
+
+.ym-menu.hide-place .menu-place {
+  width: 0; }
+
+.ym-menu.hide-main .menu-btn {
+  left: 0; }
+
+.ym-menu.hide-main .menu-place {
+  width: 0; }
+
+.ym-menu.hide-main .menu-main {
+  left: -160px; }
