--- a/src/ymui.css
+++ b/src/ymui.css
@@ -1,4 +1,13 @@
-.ymBtn {
+* {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-decoration: none;
+  font-family: Consolas, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 1.6;
+  letter-spacing: 0.05em; }
+
+.ym-btn {
   display: inline-block;
   text-align: center;
   padding: 0.5em 1em;
@@ -11,52 +20,141 @@
   cursor: pointer;
   color: #fff;
   outline: none; }
-  .ymBtn-xsmall {
+  .ym-btn-xsmall {
     font-size: 70%; }
-  .ymBtn-small {
+  .ym-btn-small {
     font-size: 80%; }
-  .ymBtn-large {
+  .ym-btn-large {
     font-size: 100%; }
-  .ymBtn-xlarge {
+  .ym-btn-xlarge {
     font-size: 110%; }
 
-.ymBtn.ymBtn-disabled {
+.ym-btn.ym-btn-disabled {
   background-color: #dddddd;
   color: #444444;
   cursor: not-allowed;
   opacity: .7; }
 
-.ymBtn-yellow {
+.ym-btn-yellow {
   background-color: #f8df70; }
-  .ymBtn-yellow:hover, .ymBtn-yellow.active {
+  .ym-btn-yellow:hover, .ym-btn-yellow.active {
     background-color: #fecc11; }
 
-.ymBtn-orange {
+.ym-btn-orange {
   background-color: #f97d1c; }
-  .ymBtn-orange:hover, .ymBtn-orange.active {
+  .ym-btn-orange:hover, .ym-btn-orange.active {
     background-color: #f86b1d; }
 
-.ymBtn-red {
+.ym-btn-red {
   background-color: #de1c31; }
-  .ymBtn-red:hover, .ymBtn-red.active {
+  .ym-btn-red:hover, .ym-btn-red.active {
     background-color: #f43e06; }
 
-.ymBtn-purple {
+.ym-btn-purple {
   background-color: #813c85; }
-  .ymBtn-purple:hover, .ymBtn-purple.active {
+  .ym-btn-purple:hover, .ym-btn-purple.active {
     background-color: #7e1671; }
 
-.ymBtn-blue {
+.ym-btn-blue {
   background-color: #2775b6; }
-  .ymBtn-blue:hover, .ymBtn-blue.active {
+  .ym-btn-blue:hover, .ym-btn-blue.active {
     background-color: #0f59a4; }
 
-.ymBtn-green {
+.ym-btn-green {
   background-color: #45b787; }
-  .ymBtn-green:hover, .ymBtn-green.active {
+  .ym-btn-green:hover, .ym-btn-green.active {
     background-color: #2c9678; }
 
-.ymBtn-cyan {
+.ym-btn-cyan {
   background-color: #1a94bc; }
-  .ymBtn-cyan:hover, .ymBtn-cyan.active {
+  .ym-btn-cyan:hover, .ym-btn-cyan.active {
     background-color: #1772b4; }
+
+.ym-form input[type=password],
+.ym-form input[type=email],
+.ym-form input[type=url],
+.ym-form input[type=date],
+.ym-form input[type=month],
+.ym-form input[type=time],
+.ym-form input[type=datetime],
+.ym-form input[type=datetime-local],
+.ym-form input[type=week],
+.ym-form input[type=tel],
+.ym-form input[type=color],
+.ym-form input[type=number],
+.ym-form input[type=search],
+.ym-form input[type=text],
+.ym-form select,
+.ym-form textarea {
+  padding: .5em .6em;
+  display: block;
+  border: 1px solid #ccc;
+  box-shadow: inset 0 1px 1px #ddd;
+  border-radius: 4px;
+  vertical-align: middle;
+  box-sizing: border-box;
+  outline: none;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s; }
+  .ym-form input[type=password]:focus,
+  .ym-form input[type=email]:focus,
+  .ym-form input[type=url]:focus,
+  .ym-form input[type=date]:focus,
+  .ym-form input[type=month]:focus,
+  .ym-form input[type=time]:focus,
+  .ym-form input[type=datetime]:focus,
+  .ym-form input[type=datetime-local]:focus,
+  .ym-form input[type=week]:focus,
+  .ym-form input[type=tel]:focus,
+  .ym-form input[type=color]:focus,
+  .ym-form input[type=number]:focus,
+  .ym-form input[type=search]:focus,
+  .ym-form input[type=text]:focus,
+  .ym-form select:focus,
+  .ym-form textarea:focus {
+    border-color: #45b787;
+    box-shadow: inset 0 1px 1px #ddd, 0 0 5px #2c9678; }
+
+.ym-form label {
+  display: block;
+  margin: .25em 0; }
+
+.ym-form select {
+  height: 2.25em; }
+
+.ym-form .ym-checkbox {
+  margin: .2em 0; }
+
+.ym-form.ym-form-inline input[type=password],
+.ym-form.ym-form-inline input[type=email],
+.ym-form.ym-form-inline input[type=url],
+.ym-form.ym-form-inline input[type=date],
+.ym-form.ym-form-inline input[type=month],
+.ym-form.ym-form-inline input[type=time],
+.ym-form.ym-form-inline input[type=datetime],
+.ym-form.ym-form-inline input[type=datetime-local],
+.ym-form.ym-form-inline input[type=week],
+.ym-form.ym-form-inline input[type=tel],
+.ym-form.ym-form-inline input[type=color],
+.ym-form.ym-form-inline input[type=number],
+.ym-form.ym-form-inline input[type=search],
+.ym-form.ym-form-inline input[type=text],
+.ym-form.ym-form-inline select,
+.ym-form.ym-form-inline textarea {
+  display: inline-block;
+  margin: 5px; }
+
+.ym-form.ym-form-inline label {
+  display: inline-block; }
+
+.ym-form.ym-form-align .ym-group {
+  margin-bottom: .5em; }
+  .ym-form.ym-form-align .ym-group label {
+    width: 10em;
+    text-align: right;
+    margin-right: 1em; }
+
+.ym-form.ym-form-align .ym-control {
+  margin: 1.5em 0 0 11em; }
+
+.ym-form.ym-form-align .ym-checkbox {
+  display: block; }
