--- a/src/ymui.scss
+++ b/src/ymui.scss
@@ -1,4 +1,15 @@
-.ymBtn {
+* {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-decoration: none;
+  font-family: Consolas, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 1.6;
+  letter-spacing: 0.05em;
+}
+$basic_color: #45b787;
+$basic_hover_color: #2c9678;
+.ym-btn {
   display: inline-block;
   text-align: center;
   padding: 0.5em 1em;
@@ -25,7 +36,7 @@
   }
 }
 
-.ymBtn.ymBtn-disabled {
+.ym-btn.ym-btn-disabled {
   background-color: #dddddd;
   color: #444444;
   cursor: not-allowed;
@@ -36,7 +47,7 @@ $color_list: #f8df70 #f97d1c #de1c31 #813c85 #2775b6 #45b787 #1a94bc;
 $color_list_deep:#fecc11 #f86b1d #f43e06 #7e1671 #0f59a4 #2c9678 #1772b4;
 @each $name in $color_name {
   $i: index($color_name,$name);
-  .ymBtn-#{$name} {
+  .ym-btn-#{$name} {
     background-color: nth($color_list,$i);
     &:hover,
     &.active{
@@ -45,3 +56,87 @@ $color_list_deep:#fecc11 #f86b1d #f43e06 #7e1671 #0f59a4 #2c9678 #1772b4;
   }
 }
 
+.ym-form {
+  input[type=password],
+  input[type=email],
+  input[type=url],
+  input[type=date],
+  input[type=month],
+  input[type=time],
+  input[type=datetime],
+  input[type=datetime-local],
+  input[type=week],
+  input[type=tel],
+  input[type=color],
+  input[type=number],
+  input[type=search],
+  input[type=text],
+  select,
+  textarea {
+    padding: .5em .6em;
+    display: block;
+    border: 1px solid #ccc;
+    box-shadow: inset 0 1px 1px #ddd;
+    border-radius: 4px;
+    vertical-align: middle;
+    box-sizing: border-box;
+    outline: none;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    &:focus {
+      border-color: $basic_color;
+      box-shadow: inset 0 1px 1px #ddd,0 0 5px $basic_hover_color;
+    }
+  }
+  label {
+    display: block;
+    margin: .25em 0;
+  }
+  select {
+    height: 2.25em;
+  }
+  .ym-checkbox {
+    margin: .2em 0;
+  }
+}
+
+.ym-form.ym-form-inline {
+  input[type=password],
+  input[type=email],
+  input[type=url],
+  input[type=date],
+  input[type=month],
+  input[type=time],
+  input[type=datetime],
+  input[type=datetime-local],
+  input[type=week],
+  input[type=tel],
+  input[type=color],
+  input[type=number],
+  input[type=search],
+  input[type=text],
+  select,
+  textarea {
+    display: inline-block;
+    margin: 5px;
+  }
+  label {
+    display: inline-block;
+  }
+}
+
+.ym-form.ym-form-align {
+  .ym-group {
+    margin-bottom: .5em;
+    label {
+      width: 10em;
+      text-align: right;
+      margin-right: 1em;
+    }
+  }
+  .ym-control {
+    margin: 1.5em 0 0 11em;
+  }
+  .ym-checkbox {
+    display: block;
+  }
+}
