--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@ $basic_hover_color: #2c9678;
   letter-spacing: 0.05em;
   box-sizing: border-box;
 }
-code {
+code,pre {
   color: #813c85;
   background-color: #fbecde;
   border-radius: 4px;
@@ -30,6 +30,9 @@ $color_list: #fcd337 #f97d1c #de1c31 #813c85 #2775b6 #45b787 #1a94bc #bbb5ac;
   .backcolor-#{$name} {
     background-color: nth($color_list,$i);
   }
+}
+.color-default {
+  color: #444444;
 }
 .ym-outWrapper {
   display: flex;
@@ -73,21 +76,42 @@ $color_list: #fcd337 #f97d1c #de1c31 #813c85 #2775b6 #45b787 #1a94bc #bbb5ac;
           }
         }
         .show-area {
+          width: 100%;
           .element {
             padding: 1em 0;
+              div[class*="bordercolor"] {
+              border-width: 1px;
+              border-style: solid;
+                margin: .2em 0;
+            }
             .ym-btn {
               margin-right: 5px;
             }
           }
-          code {
+          pre {
             font-size: .9em;
             padding: 1em;
             display: block;
             border: 1px solid #813c85;
+            overflow: auto;
+            word-break: break-all;
+            white-space: pre-wrap;
           }
         }
       }
     }
+  }
+}
+.index-page {
+  text-align: center;
+  h1 {
+    font-size: 10em;
+  }
+  h2 {
+    font-size: 2em;
+    font-weight: normal;
+    color: #666666;
+    margin-bottom: 2em;
   }
 }
 @media screen and (max-width: 768px){
