--- a/src/pages/colors.css
+++ b/src/pages/colors.css
@@ -40,3 +40,7 @@
   .colors-area li.active {
     font-weight: bold;
     color: #222222; }
+
+@media screen and (max-width: 768px) {
+  .colors-area {
+    width: 100% !important; } }
